--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <h2>Menu</h2>
           <ul class="links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="generic.html">Generic</a></li>
-            <li><a href="elements.html">Elements</a></li>
+            <li><a href="#one">Highlights</a></li>
+            <li><a href="#four">Work</a></li>
             <li><a href="#footer">Contact</a></li>
           </ul>
           <a href="#" class="close">Close</a>
